0.9

rfs:
[*] proper cache cleanup

rfsd:
[+] privileges lowering (-u option)
[*] more security checks
[+] r/o exports

0.8

[*] salt for crypt changed to empty string

rfs:
[+] write caching
[+] read caching
[+] added -ord_cache -owr_cache -ordwr_cache options to enable read/write cache
[+] added -oport option to specify server's port

rfsd:
[+] added -p and -a options to specify port and address to listen to
[*] deleting trailing '/' in export path

rfspasswd:
[*] fixed issue with ctrl-c during password prompt