@@ -2,6 +2,8 @@
 
 rfs:
 [*] proper cache cleanup
+[+] new write cache
+[*] fixed bug in _rfs_write_cached() with wrong path passed to _rfs_flush()
 
 rfsd:
 [+] privileges lowering (-u option)
